IE fix: the Frame separator's close box wasn't happy in IE - it would get partially hidden underneath the content bar to its left. Apparently IE doesn't deal well with table contents that try to extend outside of the boundaries of their parent table cells - but FF doesn't mind it one bit.
The solution was to widen the separator to the width of the close box. Maybe we should just 
pull the close button out of the separator, and into the content pane?

--- a/pages/css/gwt.css
+++ b/pages/css/gwt.css
@@ -760,27 +760,31 @@ a:visited {
 
 .pageSeparator .CloseBoxHolder {
   background: #222222;
-  width: 7px;
-  height: 15px;
+  width: "100%";
+  height: 16px;
   border-right: 1px solid black;
   padding-top: 4px;
 }
 
 .pageSeparator .CloseBox {
   background-image: url(/images/ui/close.png);
-  margin-left: -8px;
+  margin-left: 2px;
   width: 13px;
   height: 13px;
 }
 
 .pageSeparator .Minimize {
   background-image: url(/images/ui/minimize_content.png);
-  width: 8px;
+  background-repeat: no-repeat;
+  background-position: top right;
+  width: 18px;
   height: 525px;
 }
 
 .pageSeparator .Maximize {
   background-image: url(/images/ui/maximize_content.png);
+  background-repeat: no-repeat;
+  background-position: top right;
   width: 8px;
   height: 525px;
 }
